--- a/index.html
+++ b/index.html
@@ -34,20 +34,15 @@
         <div class="pure-menu">
             <a class="pure-menu-heading" href="#">MENU</a>
 
+           
             <ul class="pure-menu-list">
-                <li class="pure-menu-item menu-item-divided pure-menu-selected"><a href="index.html" class="pure-menu-link">Home</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link pure-menu-selected">Home</a></li>
                 <li class="pure-menu-item"><a href="#" class="pure-menu-link">The project</a></li>
 
                 <li class="pure-menu-item">
-                    <a href="#" class="pure-menu-link">Housing</a>
+                    <a href="relative_poverty.html" class="pure-menu-link menu-item-divided">Data</a>
                 </li>
-
-                <li class="pure-menu-item">
-                    <a href="relative_poverty.html" class="pure-menu-link">Poverty</a>
-                </li>
-                <li class="pure-menu-item">
-                    <a href="children_poverty.html" class="pure-menu-link">Children</a>
-                </li>
+               
                 <li class="pure-menu-item">
                     <a href="#" class="pure-menu-link">Stories</a>
                 </li>
