--- a/index.html
+++ b/index.html
@@ -42,11 +42,17 @@
                 <li class="pure-menu-item">
                     <a href="relative_poverty.html" class="pure-menu-link menu-item-divided">Data</a>
                 </li>
+
+                <li class="pure-menu-item"><a href="skills.html" class="pure-menu-link">Skills</a></li>
                
                 <li class="pure-menu-item">
-                    <a href="#" class="pure-menu-link">Stories</a>
+                    <a href="#" class="pure-menu-link">Social Business</a>
+                    <ul>
+                        <a href='#'><li>The Big Issue</li></a>
+                        <a href='#'><li>Suspended Coffees</li></a>
+                    </ul>
                 </li>
-                <li class="pure-menu-item"><a href="#" class="pure-menu-link">Businesses</a></li>
+                
             </ul>
         </div>
     </div>
