--- a/skills.html
+++ b/skills.html
@@ -46,7 +46,7 @@
                 <li class="pure-menu-item"><a href="skills.html" class="pure-menu-link pure-menu-selected">Skills</a></li>
                
                 <li class="pure-menu-item">
-                    <a href="#" class="pure-menu-link">Social Business</a>
+                  Social Business
                     <ul>
                        <li> <a href='#'>The Big Issue</a></li>
                        <li> <a href='#'>Suspended Coffees</a></li>
