--- a/index.html
+++ b/index.html
@@ -46,13 +46,13 @@
                 <li class="pure-menu-item"><a href="skills.html" class="pure-menu-link">Skills</a></li>
                
                 <li class="pure-menu-item">
-                    <a href="#" class="pure-menu-link">Social Business</a>
+                  Social Business
                     <ul>
                         <a href='#'><li>The Big Issue</li></a>
                         <a href='#'><li>Suspended Coffees</li></a>
                     </ul>
                 </li>
-                
+                <li class="pure-menu-item"><a href="team.html" class="pure-menu-link">The Team</a></li>
             </ul>
         </div>
     </div>
