--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -52,7 +52,7 @@
                        <li> <a href='#'>Suspended Coffees</a></li>
                     </ul>
                 </li>
-                
+                <li class="pure-menu-item"><a href="team.html" class="pure-menu-link">The Team</a></li>
             </ul>
         </div>
     </div>
