Fix options menu

--- a/skills.html
+++ b/skills.html
@@ -128,6 +128,7 @@
             </div>
                 <select id="slevel" onchange="show_chart()">
                     <!-- Function located in skillspage.js-->
+                    <option value=''>Please select an option</option>
                     <option value="sankey_chartu">Higher Education</option>
                     <option value="Compulsory">Compulsory Education</option>
                     <option value="Tertiary">Vocational Training and Non-Standard qualifications</option>
