suspended_coffees.html

--- a/suspended_coffees.html
+++ b/suspended_coffees.html
@@ -85,7 +85,7 @@
                         In the years working at Brodies, Ian has witnessed the city change. “We’ve been in the Gardens
                         for almost three years now. Sometimes, a homeless person would come, and I would offer him a hot
                         drink, have a chat with him… I became friends with a few.
-                        One of them eventually find a home and a job and came back to tell me about their new life. I
+                        One of them eventually found a home and a job and came back to tell me about his new life. I
                         was very happy for him.”
 
                     </p>
