--- a/team.html
+++ b/team.html
@@ -74,12 +74,17 @@
             <div class="content">
                 <p>We are three Computational and Data Journalism students at Cardiff University.</p>
                 <section class='pure-g'>
-                    <div class='pure-u-8-24'><img class='pure-img-responsive' src='Profiles/call-ducks-for-sale.jpg'>
+                    <div class='pure-u-8-24'>
+                        <br><br>
+                        <img class='pure-img-responsive' src='Profiles/aleks.png'>
                     </div>
                     <div class='pure-u-10-24 bio'>
                         <h3>Aleks</h3>
                         <p>
-                            Lorem ipsum
+                            Originally hailing from Tottenham in North London, Aleks' considers himself an adopted son of Wales.
+                            Initially a philosopher and writer, Aleks decided that at some point he'd have to learn a professionally
+                            applicable skill and so join an burgeoning industry - Journalism. Areas of interest include Politics, Economics, Technology,
+                            and the limitations of trying to fully comprehend reality. Cannot eat pizza without pineapple.
                         </p>
 
                     </div>
