--- a/index.html
+++ b/index.html
@@ -65,15 +65,11 @@
 
     <div id="main">
         <div class="header">
-            <h1>Caught in poverty</h1>
-            <h2>Here's a subtitle</h2>
+            <h1>Trapped In Poverty</h1>
+            <h2>A data driven investigation into Cardiff</h2>
         </div>
 
         <div class="content">
-            <h2 class="content-subhead">2nd level title</h2>
-            <p>
-                Lorem ipsum
-            </p>
             <div class='pure-g'>
 
 
@@ -81,11 +77,30 @@
 
 
             <div class="pure-g">
-                <div class="pure-u-2-3">
-                    <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2875/9069037713_1752f5daeb.jpg" alt="Peyto Lake">
-                </div>
-                <div class="pure-u-1-3">
-                    <img class="pure-img-responsive" src="http://farm3.staticflickr.com/2813/9069585985_80da8db54f.jpg" alt="Train">
+                <div class="pure-1-1-3">
+                    <img class="pure-img-responsive" src="graphics/test.jpg" alt="mariner">
+                    <br>  <br> 
+                    <article><p>"Trapped in Poverty" started in February 2019 as an Academic exercise in   
+                    investigative, local, data-based journalism. Motivated by the increasing levels of visible rough sleeping 
+                    in Cardiff, as well as other cities in the UK. The project aims to study the causes and effects of long-term poverty 
+                    in the greater Cardiff region</p>
+                    <p>The project also aims to shine a light not only on the acute problem of rough sleeping, and the problems 
+                    associated with long term poverty, but highlight the positive actions, and schemes devised by a local community 
+                    galvanised to act where government policy has failed.</p>
+                    
+                    <h2>What is the project?</h2>
+                    <p>The project is the result of a 12 week long investigation based in the South Wales area, to explore our findings,
+                    please click on the links on the left. Each section contains a story focusing on areas identified by the <em>Joseph Rowntree
+                    Foundation</em> as being contributing factors towards poverty. There is also a data repository, a collection of findings that
+                    will be linked to upcoming profiles.
+                    </p>
+                    <p>
+                    At this stage the project is currently accepting "Profiles" of Cardiff residents, aiming to link them to the data releases and 
+                    Foi's gained by the team so users can directly bespoke stories of local issues that affected their peers, if not themselves.    
+                    </p>
+
+                    </article>
+
                 </div>
                <!--  <div class="pure-u-1-4">
                     <img class="pure-img-responsive" src="http://farm6.staticflickr.com/5456/9121446012_c1640e42d0.jpg" alt="T-Shirt Store">
