--- a/skills.html
+++ b/skills.html
@@ -132,9 +132,9 @@
                 <select id="slevel" onchange="show_chart()">
                     <!-- Function located in skillspage.js-->
                     <option value=''>Please select an option</option>
-                    <option value="sankey_chartu">Higher Education</option>
                     <option value="Compulsory">Compulsory Education</option>
-                    <option value="Tertiary">Vocational Training and Non-Standard qualifications</option>
+                    <option value="sankey_chartu">Higher Education</option>
+                    <option value="Tertiary">Further and Non-Standard qualifications</option>
                 </select>
                 <div id="us_Chart" class='pure-u-3-3'></div>
                 <br><br>
