--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <img class="pure-img-responsive" src="graphics/test.jpg" alt="mariner">
                     <br>  <br> 
                     <article><p>"Trapped in Poverty" started in February 2019 as an Academic exercise in   
-                    investigative, local, data-based journalism. Motivated by the increasing levels of visible rough sleeping 
+                    investigative, local, data-based journalism. The team was motivated by the increasing levels of visible rough sleeping 
                     in Cardiff, as well as other cities in the UK. The project aims to study the causes and effects of long-term poverty 
                     in the greater Cardiff region</p>
                     <p>The project also aims to shine a light not only on the acute problem of rough sleeping, and the problems 
