--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <div class="pure-g">
                 <div class="pure-1-1-3">
-                    <img class="pure-img-responsive" src="https://i.ibb.co/Sd5v10S/mainimage.jpg" alt="mariner">
+                    <img class="pure-img-responsive" src="graphics/mainimage.jpg" alt="https://i.ibb.co/Sd5v10S/mainimage.jpg">
                     <br>  <br> 
                     <article><p>"Trapped in Poverty" started in February 2019 as an Academic exercise in   
                     investigative, local, data-based journalism. The team was motivated by the increasing levels of visible rough sleeping 
