--- a/housing.html
+++ b/housing.html
@@ -79,13 +79,18 @@
             
             <div class='pure-u-3-3 interlude'>
                 <p>
-                    Increasing homeless people and rough sleepers show how is welsh Government and community failing to tackle the poverty problems. 
+                Increasing homelessness and an increase in rough sleepers show the Welsh Government, and community is failing to get a handle on systemic poverty, 
+                and associated issues.</p>
+                <p>
+                Cardiff, the capital, has the highest numbers of homeless in Wales with significantly higher numbers of rough sleepers compared to other Welsh cities. 
+                According to the Welsh Government, the total counted rough sleepers in Cardiff so far is 64 in 2018/19, almost three times as high as Swansea in second place
+                The estimated number of rough sleepers in Cardiff 100, which represents a third of the total number of the 347 rough sleepers in Wales.  
                 </p>
                 <p>
-                    Cardiff, the capital city of Wales, has the greatest numbers of homeless people in Wales and the numbers are unrivaled compared to other cities. According to the Welsh Government, the total counted rough sleepers in Cardiff reached 64 in 2018/19, which is more than three times of the number of Swansea. The estimated number of rough sleepers in Cardiff is 100, which is about one-third of the total number of rough sleeprs(347) in Wales. 
-                </p>
-                <p>
-                    Homeless people are easily exposed to various risks from cold and hunger to violence, alcohol or drug addiction and sex offense. Last winter, many homeless people in Cardiff relied on a tent to escape from the freezing cold, and some of them are ended up going to jail because of the drug abuse, and a man even found dead in a tent on St. Mary’s street in December last year.
+                Homeless people are particularly exposed to various risks from cold and hunger to violence, as well as more likely to suffer from alcohol or drug addiction.
+                Homeless people are also more likely to be implicated in a crime, and also suffer from disproportionate rates of sexual assault.
+                Last winter, the homeless people of Cardiff had to reply on tents to escape from a bitter winter, though for some a tent was not enough
+                On the 10th of December 2018, A man was found dead in a tent on St. Mary’s street in December last year.     
                 </p>  
             </div>
             
