--- a/housing.html
+++ b/housing.html
@@ -102,7 +102,9 @@
             
             <div class='pure-u-3-3 interlude'>
                 <p>
-                    Deaths of homeless people in Wales become a serious social problem in recent years. According to the Office for National Statistics, identified deaths of  homeless people increased sharply since 2014, and estimated deaths show that at least 62 homeless people were dead in recent three years. Many of these people were able to live if they had received adequate physical and mental health care. 
+                Deaths amongst the homeless people in Wales has developed into a serious social problem in recent years. 
+                According to the Office for National Statistics, identified deaths of homeless people has increased sharply since 2014. 
+                At least 62 homeless people have died in the last three years many of which could still be alive if they had received adequate physical, and mental health care. 
                 </p>
             </div>
             
