--- a/housing.html
+++ b/housing.html
@@ -102,7 +102,7 @@
             
             <div class='pure-u-3-3 interlude'>
                 <p>
-                Deaths amongst the homeless people in Wales has developed into a serious social problem in recent years. 
+                Deaths amongst the homeless in Wales has developed into a serious social problem in recent years. 
                 According to the Office for National Statistics, identified deaths of homeless people has increased sharply since 2014. 
                 At least 62 homeless people have died in the last three years many of which could still be alive if they had received adequate physical, and mental health care. 
                 </p>
