--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -104,6 +104,24 @@
                         </ul>
 
                     </p>
+                    <p>
+                        The Joseph Rowntree Foundation’s report "UK poverty: Causes, costs and solutions" (2016) identified
+                        five factors that contribute to poverty:
+                        <ul>
+                            <li>Low wages, insecure jobs, and unemployment;</li>
+                            <li>Lack of skills;</li>
+                            <li>Ineffective benefit system;</li>
+                            <li>High costs;</li>
+                            <li>Family problems.</li>
+                        </ul>
+                    </p>
+                        <p>
+                        The compounded effects of these issues tend to create a poverty cycle, due to which more
+                        vulnerable individuals will face significant challenges to find a job, secure housing, or access
+                        training or education.
+                    </p>
+                    <p>Use the menu on the left to investigate a specific topic. For the key facts and figures on poverty in Wales and the UK, read below.</p>
+                    <p></p>
 
                 </div>
                 <div class='pure-u-3-3 interlude'>
@@ -181,7 +199,7 @@
 
                     </div> -->
                 <div class='pure-u-3-3'>
-                 
+
 
                     <div id='childVis' class='visDiv'>
 
@@ -196,7 +214,7 @@
                         work.</p>
                 </div>
                 <div class='pure-u-3-3'>
-                        <h3>Child poverty in Wales, by group</h3>
+                    <h3>Child poverty in Wales, by group</h3>
                     <div class='filter pure-u-3-3' id=householdFilter>
 
 
@@ -247,7 +265,8 @@
                         It’s becoming increasingly difficult to house these young people once they become homeless
                         because they don’t want to be in shared accommodation.”</p>
                     <p>She added that, “When they become homeless again after being evicted from supported
-                        accommodation, they are housed in places like Tresillian <em>[the larger adult hostels]</em>, which are
+                        accommodation, they are housed in places like Tresillian <em>[the larger adult hostels]</em>,
+                        which are
                         not really appropriate for them. There they could develop drug addiction and other issues and
                         end up on the streets again.”</p>
                 </div>
