--- a/housing.html
+++ b/housing.html
@@ -167,8 +167,8 @@
                         “In 2016-2017, 10,407 women in Wales asked for help with homelessness. Many of them were single
                         parents or pregnant, putting a significant number of children at risk of homelessness as well.
                         Homeless women are also exposed to the sexual harassment or violence, and abuse on the streets.
-                        For them, living in a mixed-gender accommodation is not a proper option,” said name,
-                        Communication Officer of Cardiff Llamau.
+                        For them, living in a mixed-gender accommodation is not a proper option,” said Jenna Lewis, 
+                        Head of Fundraising and Communications at Llamau.
                     </p>
 
                     <p>
