--- a/housing.html
+++ b/housing.html
@@ -125,7 +125,7 @@
                 </div>
 
                 <h2 class="content-subhead">Homelessness relief rates of cities in Wales</h2>
-                <p>Only 34% of homeless people have received government assistance.</p>
+                <p>Only 34% of homeless people have received council assistance.</p>
                 <div class='pure-u-3-3'>
                     <div id='relief_Vis'></div>
                 </div>
