--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -173,7 +173,7 @@
                 <div class='pure-u-3-3 interlude'>
                     <h2 class="content-subhead">Child poverty</h2>
                     <p>Childhood poverty is a fundamental issue in the community. The absolute child poverty rate in
-                        Wales was 16% recently, which is 1% lower than that of UK, but the relative child poverty rate
+                        Wales was 16% recently, 1 point lower than that of UK, but the relative child poverty rate
                         was 20%, equal to the UK average. </p>
                     <p>Child poverty is strongly affected by their relationship with parents, so if parents’ poverty is
                         not resolved, this problem will be transferred to the children. For last 20 years, the child
