--- a/housing.html
+++ b/housing.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="A layout example with a side menu that hides on mobile, just like the Pure website.">
-    <title>Housing</title>
+    <title>Housing - Trapped in Poverty</title>
 
     <link rel="stylesheet" href="https://unpkg.com/purecss@1.0.0/build/pure-min.css"
         integrity="sha384-nn4HPE8lTHyVtfCBi5yW9d20FjT8BJwUXyWZT9InLYax14RDjBj46LmSztkmNP9w" crossorigin="anonymous">
@@ -45,13 +45,11 @@
                     <li class="pure-menu-item">
                         <a href="relative_poverty.html" class="pure-menu-link menu-item-divided">Data</a>
                     </li>
-                    <li class="pure-menu-item">
-                        <a href="stories.html" class="pure-menu-link ">Profiles</a>
-                    </li>
+                    <li class="pure-menu-item"><a href="housing.html"
+                        class="pure-menu-link pure-menu-selected">Housing</a></li>
 
                     <li class="pure-menu-item"><a href="skills.html" class="pure-menu-link">Skills</a></li>
-                    <li class="pure-menu-item"><a href="housing.html"
-                            class="pure-menu-link pure-menu-selected">Housing</a></li>
+          
 
                     <li class="pure-menu-item">
                         <a href="#" class="pure-menu-link">Social Business</a>
@@ -62,6 +60,9 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="pure-menu-item">
+                            <a href="stories.html" class="pure-menu-link ">Profiles</a>
+                        </li>
                     <li class="pure-menu-item"><a href="team.html" class="pure-menu-link">The
                             Team</a></li>
                 </ul>
@@ -184,8 +185,8 @@
                     <p>
                         Ms. Jackson added, “If the council say there are ‘empty spaces’ for homeless people, but they
                         are talking about floor space, that is not an appropriate offer.
-                        Cardiff Council’s response to him dying on St. Mary’s Street was “This person has a tenancy,”
-                        but he had just been released from hospital because a raging addiction and he had said to me
+                        Cardiff Council’s response to the man dying on St. Mary’s Street was “This person has a tenancy,”
+                        but he had said to me
                         that he didn’t want to go into his flat where he had no gas, no electric, no food, and he didn’t
                         know anyone there.”
                     </p>
