--- a/housing.html
+++ b/housing.html
@@ -183,7 +183,7 @@
                         why arguably you are not very effective.”
                     </p>
                     <p>
-                        Ms. Jackson added, “If the council say there are ‘empty spaces’ for homeless people, but they
+                        Ms. Jackson added, “If the council says there are ‘empty spaces’ for homeless people, but they
                         are talking about floor space, that is not an appropriate offer.
                         Cardiff Council’s response to the man dying on St. Mary’s Street was “This person has a tenancy,”
                         but he had said to me
