--- a/stories.html
+++ b/stories.html
@@ -72,7 +72,7 @@
         <div class="content">
            
             <section class='pure-g profile'>
-            <div class='pure-u-24-24'><iframe width="560" height="315" src="https://www.youtube.com/embed/3-XUREVYeec" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class='pure-u-24-24'><iframe width="560" height="315" src="https://www.youtube.com/embed/1IzKwn2SxqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
            <div class='pure-u-24-24 bio'>
                <h3>Name</h3> <p>
                 Maurice
