--- a/big_issue.html
+++ b/big_issue.html
@@ -133,7 +133,7 @@
 
                     <p>What made the development programme successful was networking with other groups, charities and
                         business. “The organisation Making Minds got in touch with us to organise a writing workshop at
-                        <a href='suspended_coffees.html' target='_blank'>>The Little Man café</a>. Everyone could take
+                        <a href='suspended_coffees.html' target='_blank'>The Little Man café</a>. Everyone could take
                         part – we invited other organisations, as well. We
                         wanted to build an inclusive space, a community.”</p>
 
