--- a/suspended_coffees.html
+++ b/suspended_coffees.html
@@ -219,7 +219,7 @@
                         still no official documents or announcements on the results achieved.
 
                     </p>
-
+                    <h3>A controversial campaign</h3>
                     <p>
 
                         In January, the campaign came under criticism as, allegedly, the costs for setting up the
