Minor layout changes

--- a/team.html
+++ b/team.html
@@ -69,14 +69,14 @@
         <div id="main">
             <div class="header">
                 <h1>About Us</h1>
-                <h2>Meet the team behind <em>Caught in Poverty</em></h2>
+                <h2>Meet the team behind <em>Trapped in Poverty</em></h2>
             </div>
 
             <div class="content">
                 <p>We are three Computational and Data Journalism students at Cardiff University.</p>
                 <section class='pure-g'>
                     <div class='pure-u-8-24'>
-                        <br><br>
+                      
                         <img class='pure-img-responsive' src='Profiles/aleks.png'>
                     </div>
                     <div class='pure-u-14-24 bio'>
@@ -114,11 +114,11 @@
                 <section class='pure-g'>
                     <div class='pure-u-8-24'><img class='pure-img-responsive' src='Profiles/hee-eun.jpeg'>
                     </div>
-                    <div class='pure-u-10-24 bio'>
+                    <div class='pure-u-14-24 bio'>
                         <h3>Hee-eun</h3>
                         <p>
                             Hee-eun comes from Seoul, South Korea, escaping from greedy investors, so called ‘target audiences 
-                            of economic newspapers’. She has passion for travel, spicy food, beer, and people.
+                            of economic newspapers’. She has a passion for travel, spicy food, beer, and people.
                             She sometimes thinks that a journalist is the best occupation if they could not need to 
                             write articles on a daily basis. 
                         </p>
