Data quality section

--- a/relative_poverty.html
+++ b/relative_poverty.html
@@ -48,7 +48,7 @@
                     </li>
                     <li class="pure-menu-item"><a href="housing.html" class="pure-menu-link">Housing</a></li>
                     <li class="pure-menu-item"><a href="skills.html" class="pure-menu-link">Skills</a></li>
-                   
+
 
                     <li class="pure-menu-item">
                         <a href="#" class="pure-menu-link">Social Business</a>
@@ -60,9 +60,9 @@
                         </ul>
                     </li>
                     <li class="pure-menu-item">
-                            <a href="stories.html" class="pure-menu-link ">Profiles</a>
-                        </li>
-    
+                        <a href="stories.html" class="pure-menu-link ">Profiles</a>
+                    </li>
+
                     <li class="pure-menu-item"><a href="team.html" class="pure-menu-link">The
                             Team</a></li>
                 </ul>
@@ -106,7 +106,8 @@
 
                     </p>
                     <p>
-                        The Joseph Rowntree Foundation’s report "UK poverty: Causes, costs and solutions" (2016) identified
+                        The Joseph Rowntree Foundation’s report "UK poverty: Causes, costs and solutions" (2016)
+                        identified
                         five factors that contribute to poverty:
                         <ul>
                             <li>Low wages, insecure jobs, and unemployment;</li>
@@ -116,12 +117,13 @@
                             <li>Family problems.</li>
                         </ul>
                     </p>
-                        <p>
+                    <p>
                         The compounded effects of these issues tend to create a poverty cycle, due to which more
                         vulnerable individuals will face significant challenges to find a job, secure housing, or access
                         training or education.
                     </p>
-                    <p>Use the menu on the left to investigate a specific topic. For the key facts and figures on poverty in Wales and the UK, read below.</p>
+                    <p>Use the menu on the left to investigate a specific topic. For the key facts and figures on
+                        poverty in Wales and the UK, read below.</p>
                     <p></p>
 
                 </div>
@@ -274,23 +276,23 @@
 
                 <div class='pure-u-3-3 insert'>
                     <h3 id='dataGuide'>How to read the data on this page</h3>
-                    <p>Official statistics on poverty were last published by the ONS in June 2017. The Households Below
-                        Average Income (HBAI) dataset, published
-                        by the Department of work and Pensions and derived from the Family Resources Survey (FRS), is
-                        currently
-                        the most reliable proxy to measure poverty in the country.</p>
-                    <p>First of all, the HBAI only represents part of the population.
-                        Notably, it excludes people who are sleeping rough or do not have stable accommodation and
-                        people living in institutions, such as prisons and nursing homes.</p>
+                    <p>Official statistics on poverty were last published by the ONS in <a
+                            href='https://www.ons.gov.uk/peoplepopulationandcommunity/personalandhouseholdfinances/incomeandwealth/articles/persistentpovertyintheukandeu/2015'
+                            target='_blank'>June 2017</a> (which did not include child poverty, according to this <a href='https://www.ons.gov.uk/aboutus/transparencyandgovernance/freedomofinformationfoi/ratesofukchildpoverty' target='_blank'>this Freedom of Information Request</a> ). The Households Below Average Income
+                            (HBAI) dataset, published by the Department of work and Pensions and derived from the Family
+                            Resources Survey (FRS), is currently the most reliable proxy to measure poverty in the
+                            country.</p> <p>First of all, the HBAI only represents part of the population.
+                            Notably, it excludes people who are sleeping rough or do not have stable accommodation and
+                            people living in institutions, such as prisons and nursing homes.</p>
                     <p>Secondly, its reliability depends on the sample. While figures are considered statistically
                         reliable at the country level, that may not always be the case with regional and
                         sub-regional data.
 
                     </p>
-                    <p>In a damning report on poverty in the UK, Lord Philip Alston urged the British government to
+                    <p>In a <a href='https://www.ohchr.org/en/NewsEvents/Pages/DisplayNews.aspx?NewsID=23881&LangID=E' target='_blank'>Statement</a> on his visit to the UK, Lord Philip Alston (Special Rapporteur on extreme poverty and human rights) urged the British government to
                         adopt an official measure of poverty. Several charities and organisations are also pushing in
-                        this direction and publishing their own measures; the Joseph Rowntree Foundation's poverty data
-                        are cited in the UN report as one of the most comprehensive and reliable measures.</p>
+                        this direction and publishing their own measures; the <a href='https://socialmetricscommission.org.uk/' target='_blank'>Social Metrics Commission's New Poverty
+                        Measure</a> cited in the UN report as one of the most comprehensive and reliable.</p>
 
 
                     <p>Income <strong>Before Housing Costs (BHC)</strong> includes net earnings from employment,
@@ -302,6 +304,14 @@
                         benefits) and
                         mortgage interest payments, but also water rates, community water charges and council water
                         charges, as well as structural insurance premiums.</p>
+
+                    <p>Finally, figures provided by the Welsh Government's Statistical Services (StatsWales) are often
+                        <strong>three-year moving averages</strong>. Because the sample is smaller, annual figures would
+                        not be as statistically reliable. The upshot is that the figures are not as precise as the
+                        national ones.
+                        Moving averages are often used to analyse long-term trends. Unlike a typical average, the
+                        average for each period is calculated multiple times across overlapping sets of data.
+                    </p>
 
                 </div>
 
