--- a/skills.html
+++ b/skills.html
@@ -95,8 +95,8 @@
                             target='_blank'>2008</a>
                         financial crisis, and more recently <a
                             href="https://voxeu.org/article/rising-brexit-uncertainty-has-reduced-investment-and-employment"
-                            target='_blank'>Brexit</a>
-                        have both had significant effects on domestic business investment – the primary driver for
+                            target='_blank'>Brexit</a>.
+                        Both had significant effects on domestic business investment – the primary driver for
                         developing productivity. The ONS measure for productivity growth GVA (Growth Value Added) has
                         consistently shown <a
                             href="https://www.ons.gov.uk/economy/grossvalueaddedgva/bulletins/regionalgrossvalueaddedbalanceduk/1998to2017#interactive-map-gross-value-added-gva-per-head-for-nuts3-local-areas-1998-to-2017"
@@ -106,14 +106,14 @@
                         developed in the public rather than private <a
                             href="https://neweconomics.org/uploads/files/76fbd0aabdb290c755_qim6bkj2q.pdf"
                             target='_blank'>sector </a>(p. 11).
-                        Cardiff exists outside of these statistics.
+                        Cardiff exists outside of this trend.
                     </p>
                     <p>
                         The Welsh productivity issue demonstrates a cruel irony. Wales was one of the first nations in
                         the
                         world to industrialise, yet the contemporary Welsh economy is stymied with features more common
                         to a
-                        deindustrialised economy. Namely, Low Activity <a
+                        deindustrialised economy. Namely, low activity <a
                             href="https://www.bbc.co.uk/news/uk-wales-46522457" target='_blank'>rates</a>, weak skill
                         competancy, and a lack
                         of <a
@@ -181,10 +181,10 @@
                         at 20%. 27.7% of the 2017 cohort of Welsh university attendees would go on to jobs in England.
                     </p>
                     <p>
-                        Looking at the representation of recent years' graduates from Welsh Universities, alongside
+                        Looking at the representation of recent years' graduates from Welsh Universities alongside
                         graduate employment amongst Welsh domiciles, we can see that the biggest employers (of which the
                         Welsh University system does not produce a high enough number of graduates than employment
-                        opportunities in those positions) are in the public sector, namely: Healthcare, Education, and
+                        opportunities in those positions) are in the public sector. namely: Healthcare, Education, and
                         Social services.
 
                     </p>
@@ -210,7 +210,7 @@
 
                         “I graduated during the recession. The skills I learnt during uni weren’t always useful for the
                         work place. I was turned down for job after job because I didn’t have ‘office experience’. The
-                        skills I learnt as President of the Uni’s Canoe Club ended up being far more applicable to the
+                        skills I learned as President of the Uni’s Canoe Club ended up being far more applicable to the
                         workplace. After a few years working (not using languages because I didn’t want to be a teacher
                         or translator), I realised I only really had soft skills. That’s why I came back to do a PhD.”
 
@@ -221,7 +221,7 @@
 
                         Wales had the lowest retention rate of graduates amongst nations of the UK at 64.9%, a 5% drop
                         from the retention rate observed in 2012. “Wales has been a net exporter of jobs for some time.”
-                        Says Professor of Social Sciences Alan Felstead. “There is a high level of competition for
+                        Says Professor of social sciences Alan Felstead. “There is a high level of competition for
                         graduate-level positions. Wales is no exception.” Most graduate places in Wales are based in the
                         public sector; however, after a consolidated period of austerity the competition for these
                         places is tough. In 2010, 60,000 <a
@@ -229,13 +229,13 @@
                             target='_blank'>
                             Cardiffians</a> were employed by the public sector; this would drop as low as 45,800 in 2015
                         and today sits at 55,600. Throughout this entire period the proportion of public sector
-                        employment remained as 30% of employment in Cardiff, even in 2015, where the sector shrunk
+                        employment remained as 30% of overall employment in Cardiff, even in 2015, where the sector shrunk
                         by 25%.
                     </p>
                     <p>
 
                         Graduates who are looking to qualify for positions outside the public sector, however, find
-                        it difficult to stay in Wales. “After graduating, I started working [a company] - they have
+                        it difficult to stay in Wales. “After graduating, I started working [a large multinational] - they have
                         offices based in quite a few countries! The Welsh managerial structure was relatively flat,
                         in direct contrast to the office based in London.” says Natasha Wynne, alumna of Cardiff
                         University. “It became increasingly clear the longer I work here that the Wales office
@@ -531,7 +531,8 @@
                             abilities, and a reflexive education system to accommodate teaching these new skills. The UK
                             generally has an issue with skills training, with the majority <a
                                 href='https://www.oecdskillsforjobsdatabase.org/imbalances.php#UK/UK_L/_/_/[%22knowledge%22%2C%22abilities%22]/co'
-                                target='_blank'>“underqualified”.
+                                target='_blank'>“underqualified”. A recent <a href='https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017' target='blank'>ONS</a> report has shown that 14% of employees are 
+                            <a href='https://www.ons.gov.uk/chartimage?uri=/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017/0d2c0c7d' target='_blank'>"overqualified"</a> for their roles.
                             </a> </p>
 
                         <p>
