--- a/skills.html
+++ b/skills.html
@@ -531,8 +531,8 @@
                             abilities, and a reflexive education system to accommodate teaching these new skills. The UK
                             generally has an issue with skills training, with the majority <a
                                 href='https://www.oecdskillsforjobsdatabase.org/imbalances.php#UK/UK_L/_/_/[%22knowledge%22%2C%22abilities%22]/co'
-                                target='_blank'>“underqualified”. A recent <a href='https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017' target='blank'>ONS</a> report has shown that 14% of employees are 
-                            <a href='https://www.ons.gov.uk/chartimage?uri=/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017/0d2c0c7d' target='_blank'>"overqualified"</a> for their roles.
+                                target='_blank'>“underqualified”. A recent <a href='https://www.ons.gov.uk/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017' target='blank'>ONS</a> report has shown that 14% of Welsh employees are 
+                            <a href='https://www.ons.gov.uk/chartimage?uri=/economy/nationalaccounts/uksectoraccounts/compendium/economicreview/april2019/overeducationandhourlywagesintheuklabourmarket2006to2017/0d2c0c7d' target='_blank'>"overqualified"</a> for their roles compared to the UKs 16%.
                             </a> </p>
 
                         <p>
