--- a/stories.html
+++ b/stories.html
@@ -84,7 +84,7 @@
                     <h3>Bio</h3> <p>
                             Maurice was born in Cardiff, though left in his early ears to work for fun fairs in London.
                             He'd spend the next few years working in construction around the country before returning to 
-                            Cardiff [QUOTE]?</p>
+                            Cardiff "Came back when I was 30, got a job on buildings, then they let me go"</p>
                             
                             <p>Unfortunately, Maurice was unlucky enough to develop emphysema, without a regular source of income
                             he fell on hard times. With a lit bit of support from the big issue, and some help from local housing
